--- a/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/widgets/listing/listing_big_icon_type_link_widget_template.xhtml
+++ b/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/widgets/listing/listing_big_icon_type_link_widget_template.xhtml
@@ -8,23 +8,15 @@
   xmlns:nxp="http://nuxeo.org/nxweb/pdf">
 <c:if test="#{nxl:isLikePlainMode(widget.mode)}">#{field_2}</c:if>
 <c:if test="#{nxl:isLikeViewMode(widget.mode)}">
-  
-  <div id="docRefTarget:#{field_1}">
-    <div id="docRef:#{field_1}" class="cell popupTarget" docRef="#{field_1}">
-      <nxd:restDocumentLink document="#{field_0}">
-        <nxu:graphicImage
+
+  <div id="docRefTarget:#{field_1}" class="#{nxu:test(field_3, 'nxDropTarget', '')}">
+    <div id="docRef:#{field_1}" class="cell popupTarget dropout nxDraggable" docRef="#{field_1}">
+         <nxu:graphicImage
           value="#{nxd:bigIconPath(field_0)}" alt="#{field_2}" title="#{field_2}"
           rendered="#{!empty nxd:bigIconPath(field_0)}"
           styleClass="bigIcon" />
-      </nxd:restDocumentLink>
     </div>
   </div>
-  <script type="text/javascript">
-    <h:outputText value="new Draggable('docRef:#{field_1}', {revert:true});" />
-    <h:outputText rendered="#{field_3}"
-      value="Droppables.add('docRefTarget:#{field_1}', {accept:'cell', onDrop:function(element){moveElement(element,'docRef:#{field_1}')}, hoverclass:'dropInto'});"/>
-  </script>
-    
 </c:if>
 <c:if test="#{widget.mode == 'pdf'}">
 
