--- a/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/widgets/listing/listing_big_icon_type_widget_template.xhtml
+++ b/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/widgets/listing/listing_big_icon_type_widget_template.xhtml
@@ -8,20 +8,14 @@
 <c:if test="#{nxl:isLikePlainMode(widget.mode)}">#{field_2}</c:if>
 <c:if test="#{nxl:isLikeViewMode(widget.mode)}">
 
-  <div id="docRefTarget:#{field_1}">
-    <div id="docRef:#{field_1}" class="cell popupTarget" docRef="#{field_1}">
+  <div id="docRefTarget:#{field_1}" class="#{nxu:test(field_3, 'nxDropTarget', '')}">XXX
+    <div id="docRef:#{field_1}" class="cell popupTarget dropout nxDraggable" docRef="#{field_1}">
       <nxu:graphicImage
         value="#{nxd:bigIconPath(field_0)}" alt="#{field_2}" title="#{field_2}"
         rendered="#{!empty nxd:bigIconPath(field_0)}"
         styleClass="bigIcon" />
     </div>
   </div>
-  <script type="text/javascript">
-    <h:outputText value="new Draggable('docRef:#{field_1}', {revert:true});" />
-    <h:outputText rendered="#{field_3}"
-      value="Droppables.add('docRefTarget:#{field_1}', {accept:'cell', onDrop:function(element){moveElement(element,'docRef:#{field_1}')}, hoverclass:'dropInto'});"/>
-  </script>
-
 </c:if>
 <c:if test="#{widget.mode == 'pdf'}">
   <nxp:html>
