NXP-6799 Reinit internal Dnd after filter changes

--- a/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/incl/content_view_search_layout.xhtml
+++ b/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/incl/content_view_search_layout.xhtml
@@ -33,9 +33,10 @@ Needed parameters:
             ajaxSingle="true"
             rendered="#{nxd:isDirty(contentView.searchDocumentModel)}"
             reRender="#{contentViewRenderId}_resultsPanel, #{contentViewRenderId}_resetFilterForm, #{contentViewRenderId}_filterForm"
+            oncomplete="initNXDrapAndDropOnPage(jQuery('#' + '#{contentViewRenderId}_panel'));"
             styleClass="button warningLink">
             <nxu:actionListenerMethod
-              value="#{contentView.resetSearchDocumentModel()}" /> 
+              value="#{contentView.resetSearchDocumentModel()}" />
           </a4j:commandLink>
         </a4j:form>
       </div>
@@ -52,18 +53,20 @@ Needed parameters:
             value="#{messages['label.contentview.filter.filterAction']}"
             id="#{contentViewRenderId}_filterSubmit"
             reRender="#{contentViewRenderId}_resultsPanel, #{contentViewRenderId}_resetFilterForm, #{contentViewRenderId}_filterForm"
+            oncomplete="initNXDrapAndDropOnPage(jQuery('#' + '#{contentViewRenderId}_panel'));"
             styleClass="button">
             <nxu:actionListenerMethod
-              value="#{contentView.resetPageProvider()}" /> 
+              value="#{contentView.resetPageProvider()}" />
           </a4j:commandButton>
           <a4j:commandButton
             value="#{messages['label.contentview.filter.clearFilterButton']}"
             id="#{contentViewRenderId}_filterClear"
             immediate="true" ajaxSingle="true"
             reRender="#{contentViewRenderId}_resultsPanel, #{contentViewRenderId}_resetFilterForm, #{contentViewRenderId}_filterForm"
+            oncomplete="initNXDrapAndDropOnPage(jQuery('#' + '#{contentViewRenderId}_panel'));"
             styleClass="button">
             <nxu:actionListenerMethod
-              value="#{contentView.resetSearchDocumentModel()}" /> 
+              value="#{contentView.resetSearchDocumentModel()}" />
           </a4j:commandButton>
         </p>
       </a4j:form>
