NXP-6780: follow checkbox widget type changes

--- a/ftest/selenium/tests/testCheckboxWidget.html
+++ b/ftest/selenium/tests/testCheckboxWidget.html
@@ -54,7 +54,7 @@
 <tr>
 	<td>verifyText</td>
 	<td>checkboxWidgetLayout_view_form:nxl_checkboxWidgetLayout_1:nxw_checkboxWidget_1</td>
-	<td>false</td>
+	<td>No</td>
 </tr>
 <tr>
 	<td>click</td>
@@ -79,7 +79,7 @@
 <tr>
 	<td>verifyText</td>
 	<td>checkboxWidgetLayout_view_form:nxl_checkboxWidgetLayout_1:nxw_checkboxWidget_1</td>
-	<td>true</td>
+	<td>Yes</td>
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
@@ -99,7 +99,7 @@
 <tr>
 	<td>verifyText</td>
 	<td>checkboxWidgetLayout_view_form:nxl_checkboxWidgetLayout_1:nxw_checkboxWidget_1</td>
-	<td>true</td>
+	<td>Yes</td>
 </tr>
 <tr>
 	<td>open</td>
