--- a/ftest/selenium/tests/testComplexWidget.html
+++ b/ftest/selenium/tests/testComplexWidget.html
@@ -49,7 +49,7 @@
 <tr>
 	<td>verifyText</td>
 	<td>//form[@id='complexWidgetLayout_view_form']/table/tbody/tr/td[3]/table/tbody/tr[4]</td>
-	<td>Boolean item</td>
+	<td>Boolean item No</td>
 </tr>
 <tr>
 	<td>verifyTextNotPresent</td>
@@ -159,7 +159,7 @@
 <tr>
 	<td>verifyText</td>
 	<td>//form[@id='complexWidgetLayout_view_form']/table/tbody/tr/td[3]/table/tbody/tr[4]/td[2]</td>
-	<td>false</td>
+	<td>No</td>
 </tr>
 <tr>
 	<td>open</td>
@@ -189,7 +189,7 @@
 <tr>
 	<td>verifyText</td>
 	<td>//form[@id='complexWidgetLayout_view_form']/table/tbody/tr/td[3]/table/tbody/tr[4]</td>
-	<td>Boolean item</td>
+	<td>Boolean item No</td>
 </tr>
 
 </tbody></table>
