--- a/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/widgets/listing/listing_icon_type_widget_template.xhtml
+++ b/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/widgets/listing/listing_icon_type_widget_template.xhtml
@@ -6,12 +6,14 @@
   xmlns:nxl="http://nuxeo.org/nxforms/layout"
   xmlns:h="http://java.sun.com/jsf/html"
   xmlns:nxp="http://nuxeo.org/nxweb/pdf">
-
 <c:if test="#{nxl:isLikePlainMode(widget.mode)}">#{field_2}</c:if>
 <c:if test="#{nxl:isLikeViewMode(widget.mode)}">
 
-  <div id="docRefTarget:#{field_1}" class="#{nxu:test(field_3, 'nxDropTarget', '')}">
-    <div id="docRef:#{field_1}" class="cell popupTarget dropout nxDraggable" docRef="#{field_1}">
+  <div id="docRefTarget:#{field_1}"
+    class="#{nxu:test(field_3, 'nxDropTarget', '')}">
+    <div id="docRef:#{field_1}"
+      class="cell popupTarget dropout nxDraggable"
+      docRef="#{field_1}">
       <nxu:graphicImage
         value="#{nxd:iconPath(field_0)}" alt="#{field_2}" title="#{field_2}"
         rendered="#{!empty nxd:iconPath(field_0)}"
