NXP-6414: rerender the facesStatusMessagePanel element to display information message

--- a/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/users/create_group.xhtml
+++ b/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/users/create_group.xhtml
@@ -23,7 +23,7 @@
               value="#{messages['command.save']}"
               action="#{groupManagementActions.createGroup}"
               styleClass="button"
-              reRender="groupsPanel">
+              reRender="groupsPanel,facesStatusMessagePanel">
               <nxu:actionListenerMethod value="#{editableListBean.resetAllListsCachedModels}" />
             </a4j:commandButton>
             <a4j:commandButton
