--- a/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/users/view_group.xhtml
+++ b/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/users/view_group.xhtml
@@ -30,7 +30,7 @@
       <ul>
         <li class="selected">
           <a4j:commandLink
-            action="#{groupManagementActions.deleteGroupNoRedirect}"
+            action="#{groupManagementActions.deleteGroup}"
             onclick="if (!confirmDeleteGroup()) { return false; }"
             reRender="groupsPanel">
             <h:graphicImage value="/icons/action_delete.gif" />
