--- a/nuxeo-distribution-dm/ftest/selenium/tests/createGroup.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/createGroup.html
@@ -49,23 +49,48 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Users &amp; groups</td>
+	<td>Link=Nuxeo Admin Center</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
+	<td>Link=Users &amp; groups</td>
+	<td></td>
+</tr>
+<tr>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
 	<td>link=Groups</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
 	<td></td>
 </tr>
 <!--creation d'un groupe Johns-->
 <tr>
-	<td>clickAndWait</td>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
 	<td>link=Create a new group</td>
 	<td></td>
 </tr>
 <tr>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
+	<td></td>
+</tr>
+<tr>
 	<td>type</td>
-	<td>//input[@id='createGroup:nxl_group:nxw_groupname']</td>
+	<td>//input[@id='createGroupView:createGroup:nxl_group:nxw_groupname']</td>
 	<td>Johns</td>
 </tr>
 <tr>
@@ -75,7 +100,7 @@
 </tr>
 <tr>
 	<td>typeKeys</td>
-	<td>//input[@name='createGroup:nxl_group:nxw_members_suggest']</td>
+	<td>//input[@name='createGroupView:createGroup:nxl_group:nxw_members_suggest']</td>
 	<td>bre</td>
 </tr>
 <tr>
@@ -85,7 +110,7 @@
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//*[@id='createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
 	<td>Bree Van de Kaamp</td>
 </tr>
 <tr>
@@ -95,7 +120,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>//*[@id='createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
 	<td></td>
 </tr>
 <tr>
@@ -110,7 +135,7 @@
 </tr>
 <tr>
 	<td>typeKeys</td>
-	<td>//input[@name='createGroup:nxl_group:nxw_members_suggest']</td>
+	<td>//input[@name='createGroupView:createGroup:nxl_group:nxw_members_suggest']</td>
 	<td>jdo</td>
 </tr>
 <tr>
@@ -120,7 +145,7 @@
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//*[@id='createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
 	<td>John Doe</td>
 </tr>
 <tr>
@@ -130,7 +155,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>//*[@id='createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
 	<td></td>
 </tr>
 <tr>
@@ -145,7 +170,7 @@
 </tr>
 <tr>
 	<td>typeKeys</td>
-	<td>//input[@name='createGroup:nxl_group:nxw_members_suggest']</td>
+	<td>//input[@name='createGroupView:createGroup:nxl_group:nxw_members_suggest']</td>
 	<td>jsmith</td>
 </tr>
 <tr>
@@ -155,7 +180,7 @@
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//*[@id='createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
 	<td>John Smith</td>
 </tr>
 <tr>
@@ -165,7 +190,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>//*[@id='createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
 	<td></td>
 </tr>
 <tr>
@@ -175,27 +200,67 @@
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//*[@id='createGroup:nxl_group:nxw_members_list:0:nxw_members_listItem']</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_list:0:nxw_members_listItem']</td>
 	<td>Bree Van de Kaamp</td>
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//*[@id='createGroup:nxl_group:nxw_members_list:1:nxw_members_listItem']</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_list:1:nxw_members_listItem']</td>
 	<td>John Doe</td>
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//*[@id='createGroup:nxl_group:nxw_members_list:2:nxw_members_listItem']</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_list:2:nxw_members_listItem']</td>
 	<td>John Smith</td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
 	<td>//input[@value='Save']</td>
 	<td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>//input[@id='groupsListingView:searchForm:searchText']</td>
 	<td>Johns</td>
+</tr>
+<tr>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>//input[@value='Search']</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>link=Johns</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
 	<td></td>
 </tr>
 <!--Verification de la redirection sur la fiche du groupe-->
@@ -216,23 +281,53 @@
 </tr>
 <!--creation d'un groupe pour test unique id-->
 <tr>
-	<td>clickAndWait</td>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
 	<td>link=Back to the list</td>
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
 	<td>link=Create a new group</td>
 	<td></td>
 </tr>
 <tr>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
+	<td></td>
+</tr>
+<tr>
 	<td>type</td>
-	<td>//input[@id='createGroup:nxl_group:nxw_groupname']</td>
+	<td>//input[@id='createGroupView:createGroup:nxl_group:nxw_groupname']</td>
 	<td>Johns</td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
 	<td>//input[@value='Save']</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
 	<td></td>
 </tr>
 <tr>
@@ -243,7 +338,7 @@
 <!--creation d'un groupe pour suppression-->
 <tr>
 	<td>type</td>
-	<td>//input[@id='createGroup:nxl_group:nxw_groupname']</td>
+	<td>//input[@id='createGroupView:createGroup:nxl_group:nxw_groupname']</td>
 	<td>Suppr</td>
 </tr>
 <tr>
@@ -253,7 +348,7 @@
 </tr>
 <tr>
 	<td>typeKeys</td>
-	<td>//input[@name='createGroup:nxl_group:nxw_members_suggest']</td>
+	<td>//input[@name='createGroupView:createGroup:nxl_group:nxw_members_suggest']</td>
 	<td>jdo</td>
 </tr>
 <tr>
@@ -263,7 +358,7 @@
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//*[@id='createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
 	<td>John Doe</td>
 </tr>
 <tr>
@@ -273,7 +368,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>//*[@id='createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
 	<td></td>
 </tr>
 <tr>
@@ -288,7 +383,7 @@
 </tr>
 <tr>
 	<td>typeKeys</td>
-	<td>//input[@name='createGroup:nxl_group:nxw_members_suggest']</td>
+	<td>//input[@name='createGroupView:createGroup:nxl_group:nxw_members_suggest']</td>
 	<td>jsmith</td>
 </tr>
 <tr>
@@ -298,7 +393,7 @@
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//*[@id='createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
 	<td>John Smith</td>
 </tr>
 <tr>
@@ -308,7 +403,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>//*[@id='createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
 	<td></td>
 </tr>
 <tr>
@@ -323,7 +418,7 @@
 </tr>
 <tr>
 	<td>typeKeys</td>
-	<td>//input[@name='createGroup:nxl_group:nxw_members_suggest']</td>
+	<td>//input[@name='createGroupView:createGroup:nxl_group:nxw_members_suggest']</td>
 	<td>lucien</td>
 </tr>
 <tr>
@@ -333,7 +428,7 @@
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//*[@id='createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
 	<td>Lucien Bramard</td>
 </tr>
 <tr>
@@ -343,7 +438,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>//*[@id='createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
 	<td></td>
 </tr>
 <tr>
@@ -353,27 +448,67 @@
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//*[@id='createGroup:nxl_group:nxw_members_list:0:nxw_members_listItem']</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_list:0:nxw_members_listItem']</td>
 	<td>John Doe</td>
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//*[@id='createGroup:nxl_group:nxw_members_list:1:nxw_members_listItem']</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_list:1:nxw_members_listItem']</td>
 	<td>John Smith</td>
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//*[@id='createGroup:nxl_group:nxw_members_list:2:nxw_members_listItem']</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_list:2:nxw_members_listItem']</td>
 	<td>Lucien Bramard</td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
 	<td>//input[@value='Save']</td>
 	<td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>//input[@id='groupsListingView:searchForm:searchText']</td>
 	<td>Suppr</td>
+</tr>
+<tr>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>//input[@value='Search']</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>link=Suppr</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
 	<td></td>
 </tr>
 <!--Verification de la redirection sur la fiche du groupe-->
@@ -392,13 +527,17 @@
 	<td>link=Edit</td>
 	<td></td>
 </tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Suppr</td>
+	<td></td>
+</tr>
 <!--Deconnexion-->
 <tr>
 	<td>clickAndWait</td>
 	<td>link=Log out</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
