--- a/nuxeo-distribution-dm/ftest/selenium/tests/searchUsers.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/searchUsers.html
@@ -48,22 +48,47 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
+	<td>Link=Home</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
 	<td>link=Users &amp; groups</td>
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>//input[@id=&quot;searchForm:clearButton&quot;]</td>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>//input[@id='usersListingView:searchForm:clearButton']</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
 	<td></td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>//input[@id=&quot;searchForm:searchText&quot;]</td>
+	<td>//input[@id='usersListingView:searchForm:searchText']</td>
 	<td>j</td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>//input[@id=&quot;searchForm:searchButton&quot;]</td>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>//input[@value='Search']</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
 	<td></td>
 </tr>
 <tr>
@@ -93,18 +118,38 @@
 </tr>
 <!--Réinitialisation de la recherche-->
 <tr>
-	<td>clickAndWait</td>
-	<td>//input[@id=&quot;searchForm:clearButton&quot;]</td>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>//input[@id='usersListingView:searchForm:clearButton']</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
 	<td></td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>//input[@id=&quot;searchForm:searchText&quot;]</td>
+	<td>//input[@id='usersListingView:searchForm:searchText']</td>
 	<td>thing</td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>//input[@id=&quot;searchForm:searchButton&quot;]</td>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>//input[@value='Search']</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
 	<td></td>
 </tr>
 <tr>
@@ -117,7 +162,6 @@
 	<td>link=Log out</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
